--- a/copycart/TODO.txt
+++ b/copycart/TODO.txt
@@ -6,30 +6,16 @@
 
 		SNAPSHOT 04/01/2013
 
-		    >>> UPG GWT 2.5.0 > IN TEST
-		    	> /gwtcommons/pom.xml (gwt.version, gquery-dnd-bundle version)
-		    	> /econyx-base-app/pom.xml (gwt.version)
-		    	> it.mate.gwtcommons.rpc.generator.RemoteInterfaceProxyGenerator
+		    >>> DATARI > INIZIATO
+		    	> it.mate.econyx.client.ui.StampPreviewPanel.update
 		    	
-		    >> INSTANT CACHE
-		    	>> settato instanceCache=true sui ds
-		    	>> TENERE SOTTO CONTROLLO E PROVARE SU GP8
-		    		> it.mate.gwtcommons.server.dao.JdoDao.suppressExceptionThrowOnInternalFind
-		    		
-		    	>> DA SISTEMARE:
-		    		> it.mate.econyx.server.services.impl.PortalPageAdapterImpl >> utilizza CacheUtils
-		    		> it.mate.gwtcommons.server.utils.CacheUtils
-		    			> .put: gli aggiornamenti in memcache vanno sempre fatti
-		    			> .deleteByKey: manca la delete in instcache
-		    	
-		    >>> DATARI !!!!
-		    	>> iniziato in it.mate.econyx.client.ui.StampPreviewPanel.update
-		    	
-		    >>> TIMBRI OVALI
-		    	> it.mate.econyx.shared.model.Timbro (.oval = true | false)
-		    	> it.mate.econyx.client.ui.StampPreviewPanel.setTimbro(Timbro)
-		    	>> PDF > it.mate.econyx.server.services.impl.CustomAdapterImpl.printOrderItemDetails
-		    	
+			> chiusura ordine: modalità di pagamento (nota html) > INIZIATO (08/01/2013)
+				> it.mate.econyx.shared.model.ModalitaPagamento
+				> e tutti i punti che lo utilizzano
+				> it.mate.econyx.client.view.site.ShoppingCartDetailedViewImpl
+					> modificare closeOrder (salvare su order modalitaSpedizione e modalitaPagamento)
+				
+			
 		    >>> NOTE ALL'ORDINE
 		    	> nota di riga
 		    	> nota complessiva
@@ -37,20 +23,32 @@
 		    >>> TIMBRO LOGO:
 		    	> indicare la dim max in pixel dell'immagine da caricare		
 		    	
-			> gestione utenti > attivazione utente in manuale >> invio mail
-				> invio mail di notifica agli admins
-				
 			> chiusura ordine: totale con spese di spedizione
 			
-			> chiusura ordine: modalità di pagamento (nota html)
-			
-			> hai dimenticato la pwd
+			> gestione utenti > attivazione utente in manuale
+				> invio mail di notifica agli admins
+				
+			> 'password dimenticata?'
 			
 			> timbro: aggiungi/cancella riga
 				>> it.mate.econyx.client.view.site.custom.OrderItemDetailCustomizerImpl.initDetailPanel
+				>> it.mate.econyx.client.view.site.custom.OrderItemDetailCustomizerImpl
+					> aggiungere campo numero righe > aggiunge | elimina righe
 				
 			---------------------------------
 			
+		    >> INSTANCE CACHE
+		    	>> settato instanceCache=true sui ds
+		    	>> IN TEST E DA PROVARE SU GP8
+		    		> it.mate.gwtcommons.server.dao.JdoDao.suppressExceptionThrowOnInternalFind
+		    		> it.mate.econyx.server.services.impl.PortalPageAdapterImpl >> utilizza CacheUtils
+		    		> it.mate.gwtcommons.server.utils.CacheUtils (.put e .deleteByKey)
+		    	
+		    >>> UPG GWT 2.5.0 > IN TEST
+		    	> /gwtcommons/pom.xml (gwt.version, gquery-dnd-bundle version)
+		    	> /econyx-base-app/pom.xml (gwt.version)
+		    	> it.mate.gwtcommons.rpc.generator.RemoteInterfaceProxyGenerator
+		    	
 			> timbro: default font: 10px > OK
 			> timbro: logo dnd > OK
 				> it.mate.econyx.client.ui.StampPreviewPanel.update
@@ -59,6 +57,11 @@
 			> prezzo > solo a utenti registrati > PREZZO IN ProductView >> OK
 			> attendere prego >> waiting gif
 			> pagina in evidenza (tnt) > OK
+		    >>> TIMBRI OVALI > OK
+		    	> it.mate.econyx.shared.model.Timbro (.oval = true | false)
+		    	> it.mate.econyx.client.ui.StampPreviewPanel.setTimbro(Timbro)
+		    	>> PDF > it.mate.econyx.server.services.impl.CustomAdapterImpl.printOrderItemDetails
+		    	
 				
 			---------------------------------
 			
@@ -100,6 +103,39 @@
 		
 		-----------------------------------------------------------------------------		
 		
+		>> HOSTING ARUBA:
+		
+			http://hosting.aruba.it/
+		
+		-----------------------------------------------------------------------------		
+		
+		-- INSTANCE IDENTIFICATION (10/01/2013)
+			>>> ATTENZIONE: APPENGINE ENVIRONMENT
+				SEE https://developers.google.com/appengine/docs/java/runtime?hl=it#The_Environment
+				PER TESTARE SE Development/Production
+			> ServletContextListener > it.mate.econyx.server.servlets.AppServletContextListener
+			> InstanceMessage Serializable
+			    - String command
+			    - Object payload
+			> InstanceContext Serializable
+			    - String uuid
+			    - List<InstanceMessage>
+			> contextInitialized:
+			    startup dell'istanza: calcolare un UUID e aggiungerlo in memcache (parametro global.instanceContextMap Map<String, List<InstanceContext>>)
+			> contextDestroyed:
+			    shutdown dell'istanza: rimuovere UUID dell'istanza da memcache
+			> per colloquiare con l'istanza specifica:
+			    - mettere in memcache un messaggio con UUID dell'istanza
+			    - nel cron service dell'istanza verificare la presenza del messaggio
+			    
+		-- ECONYX-PROBE
+			vedi P:\OPT\gwt\appengine\appengine-python-1.6.6\econyx-probe
+			     P:\OPT\gwt\appengine\appengine-python-1.6.6\run.bat
+			TODO:
+				- PROVARE PYPHANTOMJS:
+					- http://stackoverflow.com/questions/6742662/pyphantomjs-makes-python-crash
+					- http://code.google.com/p/phantomjs/downloads/list	    
+
 
 		-- OTTIMIZZAZIONI
 			JdoDaoWithCache
